--- a/angular.json
+++ b/angular.json
@@ -102,9 +102,21 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {}
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
-  "defaultProject": "cryptoInfo"
+  "defaultProject": "cryptoInfo",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
