--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "angular-cli-ghpages": "^1.0.0-rc.2",
     "bootstrap": "^4.6.0",
+    "highcharts": "^9.2.2",
+    "highcharts-angular": "^2.10.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
