--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "highcharts": "^9.2.2",
     "highcharts-angular": "^2.10.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
